create ptx benchmarks